Update docs for repeat runs and runtime stats

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="table-header">
             <div>
               <h2>Model Results</h2>
-              <p class="subtitle" id="tableHint">Showing aggregate results.</p>
+              <p class="subtitle" id="tableHint">Showing aggregate results (5× repeats per test).</p>
             </div>
           </div>
           <div class="table-wrap">
