--- a/run.html
+++ b/run.html
@@ -36,7 +36,7 @@
               <button id="exportBtn" class="ghost">Export CSV</button>
             </div>
             <div class="hint" id="runHint">
-              Runs missing tests for the currently selected models.
+              Runs missing (or outdated) tests for the currently selected models. Each test repeats 5× (score out of 50), and cells show avg time + avg tok/s.
             </div>
           </section>
           <section class="card" aria-labelledby="settings-title">
