Add score progression chart to results page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         </div>
       </header>
       <main class="main">
+        <section class="chart-card" aria-labelledby="chart-title">
+          <div class="table-header">
+            <div>
+              <h2 id="chart-title">Score Progression</h2>
+              <p class="subtitle">Cumulative score per model across tests (left → right).</p>
+            </div>
+          </div>
+          <div class="chart-wrap">
+            <canvas id="progressChart" class="chart-canvas"></canvas>
+          </div>
+        </section>
         <section class="table-card">
           <div class="table-header">
             <div>
