Update results dropdown for Pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <details class="nav-dropdown" data-results-dropdown>
                 <summary class="nav-link" aria-current="page">Results</summary>
                 <div class="nav-menu">
-                  <a class="nav-menu__item" href="index.html" aria-current="page">Latest</a>
+                  <span class="nav-menu__empty">No results available</span>
                 </div>
               </details>
             </div>
