--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ollama Benchmarks - Results</title>
+    <title>Ollama Benchmarks by PuZZleDucK</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,16 +18,14 @@
       <header class="site-header">
         <nav class="navbar">
           <div class="nav-brand title-block">
-            <p class="kicker">Ollama Benchmarks</p>
-            <h1>Published Results</h1>
+            <p class="kicker">Ollama Benchmarks by PuZZleDucK</p>
+            <h1>Simple math benchmark</h1>
             <p class="subtitle">
-              Latest benchmark totals pulled from the published CSV feed.
+              Short maths challenges across arithmetic, algebra, and worded reasoning.
             </p>
           </div>
           <div class="nav-actions">
             <div class="nav-links">
-              <a class="nav-link" href="settings.html">Settings</a>
-              <a class="nav-link" href="run.html">Run</a>
               <details class="nav-dropdown" data-results-dropdown>
                 <summary class="nav-link" aria-current="page">Results</summary>
                 <div class="nav-menu">
@@ -35,7 +33,6 @@
                 </div>
               </details>
             </div>
-            <div class="status-pill" id="statusPill">Loading</div>
           </div>
         </nav>
         <div class="header-grid">
@@ -54,16 +51,32 @@
                 <div class="summary-label">Models</div>
                 <div class="summary-value" id="modelCount">0</div>
               </div>
+              <div>
+                <div class="summary-label">Winning model</div>
+                <div class="summary-value" id="winningModel">--</div>
+              </div>
+              <div>
+                <div class="summary-label">Best average</div>
+                <div class="summary-value" id="bestAverage">--</div>
+              </div>
+              <div>
+                <div class="summary-label">Min average</div>
+                <div class="summary-value" id="minAverage">--</div>
+              </div>
+              <div>
+                <div class="summary-label">Mean average</div>
+                <div class="summary-value" id="meanAverage">--</div>
+              </div>
+              <div>
+                <div class="summary-label">Median average</div>
+                <div class="summary-value" id="medianAverage">--</div>
+              </div>
+              <div>
+                <div class="summary-label">Fastest total time</div>
+                <div class="summary-value" id="fastestTime">--</div>
+              </div>
             </div>
             <div class="hint" id="lastUpdated"></div>
-          </section>
-          <section class="card" aria-labelledby="links-title">
-            <div class="card-title" id="links-title">Actions</div>
-            <a class="link-pill" href="run.html">Run Benchmarks</a>
-            <a class="link-pill" id="downloadCsvLink" href="data/results.csv" download="results.csv">
-              Download CSV
-            </a>
-            <div class="hint" id="downloadHint">Ensure `data/results.csv` is published.</div>
           </section>
         </div>
       </header>
