Add per-results observations

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             </div>
             <div class="hint" id="lastUpdated"></div>
           </section>
+          <section class="card" aria-labelledby="observations-title">
+            <div class="card-title" id="observations-title">o5 Results Observations</div>
+            <ul class="observations-list" id="observationsList"></ul>
+            <div class="hint" id="observationsHint">No observations available for this run.</div>
+          </section>
         </div>
       </header>
       <main class="main">
